[package]
name = "payments"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
escrow = { path = "../escrow" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow = { path = "../escrow" }
